src/objects/Product_Group_GLBL__c.object
<CustomObject>
    <description>Object to store Product Information, mastered Product Group records from Material ODS : MERC : Created on 09/27/2013 by Katy Lorenti, Mavens Consulting</description>
    <fields>
        <fullName>Cease_Pblsh_Dt_GLBL__c</fullName>
        <description>This represents the last date on which that record was published/refreshed in the Material ODS.   When this date is populated, it indicates that the record has been deleted.  This is one of the two fields that would be used for delta detection of changes to the Material ODS.
Created by John A Adams 11/1/2013</description>
        <label>Cease Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cntry_Cd_GLBL__c</fullName>
        <description>Unique code which describes the country which uses the translated names on this record.
Created by John A Adams 11/1/2013</description>
        <label>Country Code</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crt_Dt_GLBL__c</fullName>
        <description>This represents the date on which the record was initially created in the Material Master Hub database.
Created by John A Adams 11/1/2013</description>
        <label>ODS Created Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dialect_Nm_GLBL__c</fullName>
        <description>Language dialect of the translated data.
Created by John A Adams 11/1/2013</description>
        <label>Dialect Name</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Dt_GLBL__c</fullName>
        <description>The date on which the Product Group is last effective.
Created by John A Adams 11/1/2013</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grp_Abbr_Nm_GLBL__c</fullName>
        <description>The most-commonly used abbreviation for a product grouping.
Created by John A Adams 11/1/2013</description>
        <label>Abbreviation Name</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grp_Cnvrsn_Unit_Cd_GLBL__c</fullName>
        <description>A code used to denote the common unit of measure for a standard group of products.</description>
        <label>Unit Measure</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grp_Prps_Cd_GLBL__c</fullName>
        <description>Classification of the purpose of a product grouping.   
Created by John A Adams 11/1/2013</description>
        <label>Purpose Code</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lst_Pblsh_Dt_GLBL__c</fullName>
        <description>This represents the date on which information was last published for this record to the Material ODS.  This date will be populated when the record is initially created in the ODS or when it is updated.  This is one of the two fields that would be used for delta detection of changes to the Material ODS.  
Created by John A Adams 11/1/2013</description>
        <label>Last Publish Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Generated by Workflow used for Integration with External Systems.
Created by J Adams 12/10/2013</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_Grp_Desc_Txt_GLBL__c</fullName>
        <description>Textual Description further explaining a product grouping or its use
Created by John A Adams 11/1/2013</description>
        <label>Description Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_External_ID_GLBL__c</fullName>
        <description>Mastered External Id for Product Group Table.</description>
        <externalId>true</externalId>
        <label>Product Group External ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_Id_GLBL__c</fullName>
        <description>A sequentially-assigned number, generated from a sequence MTM_PRD_GRP_ID_SEQ  uniquely identifies a product grouping.
Created by John A Adams 11/1/2013</description>
        <label>Product Group Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Src_Cd_GLBL__c</fullName>
        <description>An indicator of whether a grouping was defined by some external agency or by Lilly.   Valid Values are:  E = External Source, L = Lilly
Created by John A Adams 11/1/2013</description>
        <label>Source Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Dt_GLBL__c</fullName>
        <description>The date on which the Product Group becomes effective.
Created by John A Adams 11/1/2013</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trnsltd_Grp_Nm_GLBL__c</fullName>
        <description>Product group name captured in the language dialect specified on the record.
Created by John A Adams 11/1/2013</description>
        <label>Translated Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updt_Dt_GLBL__c</fullName>
        <description>This represents the date on which the record was last updated in the Material Master Hub database. 
Created by John A Adams 11/1/2013</description>
        <label>ODS Updated Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Product Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Prod_Grp_Desc_Txt_GLBL__c</columns>
        <columns>Cntry_Cd_GLBL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I110000008cxxEAA_00N11000000PFpYEAW</fullName>
        <active>true</active>
        <field>Meeting_Products_MERC__c.Product_MERC__c</field>
        <filterItems>
            <field>Product_Group_GLBL__c.Cntry_Cd_GLBL__c</field>
            <operation>equals</operation>
            <value>ZZ</value>
        </filterItems>
        <filterItems>
            <field>Product_Group_GLBL__c.Grp_Prps_Cd_GLBL__c</field>
            <operation>equals</operation>
            <value>MKTP</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Meeting Product_Product</name>
    </namedFilters>
    <pluralLabel>Product Group</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>